--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -28,4 +28,9 @@ color:grey;
     font-size: 16px;
     color: aquamarine;
 }
-
+/* FOOTER*/
+.footer--copyright {
+    font-size: 21px;
+    text-align: right;
+    color: grey;
+    
